--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,12 +2,15 @@ project:
   type: website
 
 website:
-  title: "mywebsite"
+  title: "Erika Austhof"
   navbar:
     left:
-      - href: index.qmd
+      - href: homa.qmd
         text: Home
-      - about.qmd
+      - research.qmd
+      - teaching.qmd
+      - consulting.qmd
+      - publications.qmd
 
 format:
   html:
